--- a/sample.html
+++ b/sample.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <h2>I enjoy HTML</h2>
+    <h2>I enjoy HTML5</h2>
     <p>I have created my html</p>
     
 </body>
